# yggdrasil-bindings

./: .gitignore  Cargo.toml  README.md  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: build-binaries.yaml  build-dotnet.yaml  build-java.yaml  build-javascript.yml  build-python.yml  build-ruby.yml  build-rust-binaries.yaml  build-wasm.yaml  publish-dotnet.yaml  publish-java.yaml  publish-javascript.yml  publish-python.yml  publish-ruby.yaml  release-new-ffi-version.yaml  release-plz.toml  release-plz.yaml  sarif-and-test.yaml  validate-java-bindings-load.yml
dotnet-engine/: README.md
dotnet-engine/Yggdrasil.Engine/: Buf.cs  FFI.cs  FFIReader.cs  Flat.cs  Flatbuffers.cs  NativeLoader.cs  Strategies.cs  Types.cs  Yggdrasil.Engine.csproj  YggdrasilEngine.cs  (+1 more)
dotnet-engine/Yggdrasil.Engine.Tests/: Yggdrasil.Engine.Tests.csproj  YggdrasilEngineTest.cs  YggdrasilImpactMetricsTest.cs
flat-buffer-defs/: enabled-message.fbs
java-engine/: .gitignore  README.md  build.gradle.kts  gradle.properties
perl-engine/: MANIFEST  Makefile.PL  README.md  build.sh
php-engine/: composer.json
pure-wasm/: CHANGELOG.md  Cargo.toml
pure-wasm/src/: lib.rs
python-engine/: pyproject.toml  tox.ini
ruby-engine/: build.sh  yggdrasil-engine.gemspec
scripts/: bump-yggdrasil-core.py
yggdrasilffi/: CHANGELOG.md  Cargo.toml  README.md
yggdrasilffi/src/: compat_glibc.rs  lib.rs
yggdrasilffi/src/flat/: enabled-message_generated.rs  jni_bridge.rs  mod.rs  serialisation.rs
yggdrasilffi/testfiles/: custom_strategy_feature_d.json
yggdrasilwasm/: Cargo.toml
(+116 files in other folders)
