[package]
edition = "2021"
name = "yggdrasilffi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "yggdrasilffi"

[dependencies]
chrono = "0.4.42"
jni = { version = "0.21.1" }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
unleash-types = { version = "0.15.21", default-features = false }
unleash-yggdrasil = { version = "0.20.1" }
flatbuffers = "25.2.10"
